# easyclimate-map

./: .buildinfo  .gitattributes  .gitignore  .readthedocs.yaml  README.md  __init__.py  genindex.html  index.html  install.html  legal.html  map_zh_CN.py  objects.inv  py-modindex.html  pyproject.toml  release_requirements.txt  search.html  searchindex.js  sg_execution_times.html  tool.py
.github/workflows/: AutoPushToPypi.yml  docs_dev.yml
_downloads/0018bdf6100c8b4c18a88d94d522430b/: plot_tibetan_plateau_basins.ipynb
_downloads/5d671496f4d3e84fdd1d1eeffcd5681a/: plot_zh_CN_nation.ipynb
_downloads/5ee68fc8b7352e15ce8697075ff93c8a/: plot_zh_CN_river1.ipynb
_downloads/5f55b19cdd6c76ca47694bd5fb136efa/: plot_zh_CN_river3.ipynb
_downloads/883e62a1b1ff0032b4b0cc98b00a24a8/: plot_zh_CN_river3.py
_downloads/be662ae65ab706f7f6f950f95791d960/: plot_zh_CN_provinces.ipynb
_downloads/e041d315eadf725eb2c5833df651bc14/: plot_zh_CN_nation.py
_sources/: index.rst.txt  legal.rst.txt  sg_execution_times.rst.txt
_sources/auto_gallery/: index.rst.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
api_index/: index.html
auto_gallery/: index.html  sg_execution_times.html
auto_gallery/tibetan_plateau/: index.html  plot_tibetan_plateau_basins.html  sg_execution_times.html
auto_gallery/zh_CN/: index.html  plot_zh_CN_nation.html  plot_zh_CN_provinces.html  plot_zh_CN_river1.html  plot_zh_CN_river3.html  (+1 more)
docs/: requirements-docs.txt
dynamic_docs/: README.html
readme/: README_ja_JP.md  README_zh_CN.md
scripts/: build_wheel.ps1  build_wheel.sh
(+46 files in other folders)
