[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "easyclimate_map"

license = {file = "LICENSE"}

description = "Easily obtain map data"
keywords = ["climate", "atmosphere", "weather", "meteorology"]
authors = [
    {name = "shenyulu", email = "shenyulu2020@gmail.com"},
]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Scientific/Engineering',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]
dynamic = ["dependencies", "version"]

[project.urls]
homepage = "https://github.com/shenyulu/easyclimate-map"
documentation = "https://easyclimate-map.readthedocs.io/en/latest/"
source = "https://github.com/shenyulu/easyclimate-map"
download = "https://pypi.org/project/easyclimate-map/#files"
tracker = "https://github.com/shenyulu/easyclimate-map/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["release_requirements.txt"]}
version = {attr = "easyclimate_map.__version__"}

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
